# saiga-process-handler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.org
config/: config.json
db/: saiga.db
db/procedures/: fetch-to-time-range.sql
include/: saiga_database_manager.h  saiga_endpoint.h  saiga_endpoint_config.h  saiga_process.h  saiga_process_handler.h
sample-server/: server.py
src/: main.cpp  saiga_database_manager.cpp  saiga_endpoint.cpp  saiga_endpoint_config.cpp  saiga_process.cpp  saiga_process_handler.cpp
